# IntelTbb

./: ProTBB Notes.md  README.md
ProTBB/: .clang-format  .clang-format-ignore  .clang-tidy  CMakeLists.txt  ProTBB Notes.md  README.md  Todo.md
ProTBB/cmake/: ClangFormat.cmake  CodeCoverage.cmake
ProTBB/documentation/: CMakeLists.txt  Doxyfile
ProTBB/src/: CMakeLists.txt
ProTBB/src/c10_own_algo_using_tasks/: 1_parallel_invoke_fib.cc  2_task_group_fib.cc  CMakeLists.txt
ProTBB/src/c11_control_num_threads/: 1_global_control_and_explicit_arena.cc  CMakeLists.txt
ProTBB/src/c12_isolation_for_correctness/: 1_task_arena_isolate.cc  CMakeLists.txt
ProTBB/src/c13_setting_affinity/: 1_pinning_threads_to_cores.cc  CMakeLists.txt
ProTBB/src/c14_task_priorities/: 1_task_arena_prioritiy.cc  CMakeLists.txt
ProTBB/src/c15_cancellation_exception_handling/: 1_cancellation.cc  2_cancellation_alternate.cc  3_cancellation_using_task_group.cc  CMakeLists.txt
ProTBB/src/c16_tuning_tbb_algo/: 1_parallel_for_partitioners_timed.cc  2_cache_oblivious_parallel_for_mat_trans.cc  3_parallel_for_addition_partitioners.cc
ProTBB/src/c17_flow_graph_beyond_basic/: 1_ordering_message.cc  2_moonlighting_enable_disable.cc  CMakeLists.txt
ProTBB/src/c18_async_node/: 1_async_node_demo.cc  2_async_node_gpu_opencl.cc  CMakeLists.txt
ProTBB/src/c1_jumping_right_in/: 1_hello_tbb.cc  2_hello_parallel_stl.cc  3_gamma_baseline.cc  4_gamma_opt_tbb_flowgraph_pipelined.cc  5_gamma_opt_parallel_for.cc  6_gamma_opt_parallel_for_transform.cc  CMakeLists.txt  intro_example.hpp
ProTBB/src/c20_tbb_numa/: 1_benchmarking_numa_prog.cc
ProTBB/src/c2_generic_parallel_algo/: 1_lambda_vs_functors.cc  2_parallel_invoke_two_quickshort.cc  3_parallel_for_matrix_multipy.cc  4_parallel_reduce_maxNum.cc  5_parallel_reduce_pi.cc  6_parallel_scan_running_sum.cc  7_parallel_foreach_prime.cc  8_parallel_pipeline.cc  CMakeLists.txt
ProTBB/src/c3_flow_graphs/: 1_flow_grapg_basic_two_node.cc  2_join_node_example.cc  3_try_put_vs_input_node.cc  4_flow_graph_serial_unlimited_tagmatching_demo.cc  5_dependency_graph_continue_msg.cc  CMakeLists.txt
ProTBB/src/c4_tbb_parallel_algo_std_cpp/: 1_tbb_custom_iterators.cc  2_parallel_stl.cc  CMakeLists.txt
ProTBB/src/c5_synchronization/: 1_coarse_grained_locking.cc  2_fine_grained_locking.cc  3_fine_grained_using_atomics.cc  4_hist_tls_reduction.cc  5_hist_tls_reduction_moderncpp.cc  6_hist_tls_reduction_combine_each.cc  7_hist_tls_combinable_reduction_combine_each.cc  8_hist_tls_reduction.cc  CMakeLists.txt
ProTBB/src/c6_data_structure_concurrency/: 1_concurrent_hash_map.cc  2_concurrent_queues.cc  3_iterators.cc  4_concurrent_vector.cc  CMakeLists.txt
ProTBB/src/c7_scalable_memory_allocator/: 1_allocator_benchmark.cc  2_allocator_benchmark.cc  3_malloc_profile.cc  5_custom_new_delete.cc  6_check_huge_pages_enabled.cc  CMakeLists.txt
