# Apply linker flags globally
# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--verbose")
# set(CMAKE_BUILD_TYPE Release)
add_subdirectory(c1_jumping_right_in)
add_subdirectory(c2_generic_parallel_algo)
add_subdirectory(c3_flow_graphs)
add_subdirectory(c4_tbb_parallel_algo_std_cpp)
add_subdirectory(c5_synchronization)
add_subdirectory(c6_data_structure_concurrency)
add_subdirectory(c7_scalable_memory_allocator)
add_subdirectory(c10_own_algo_using_tasks)
add_subdirectory(c11_control_num_threads)
add_subdirectory(c12_isolation_for_correctness)
add_subdirectory(c13_setting_affinity)